infrastructure/k8s/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mercurypay
  labels:
    name: mercurypay
